--- a/pyproject.toml
+++ b/pyproject.toml
@@ -13,9 +13,12 @@ authors = [
 
 [tool.poetry.dependencies]
 python = "^3.7"
+requests = "^2.22"
+pytz = "^2019.3"
 
 [tool.poetry.dev-dependencies]
 pytest = "^3.0"
+nose = "^1.3"
 
 [build-system]
 requires = ["poetry>=0.12"]
