--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,28 +1,28 @@
 [tool.poetry]
-name = "pyopenfec"
-version = "0.2.3"
+name = "fec"
+version = "0.2.4"
 description = "OpenFEC API Client"
 
 license = "MIT"
 readme = "README.md"
 
-homepage = "https://github.com/roberttownley/pyopenfec/"
+homepage = "https://github.com/jeremyjbowers/pyopenfec"
 keywords = [
   "fec",
   "campaign",
   "finance",
   "openfec",
 ]
-repository = "https://github.com/roberttownley/pyopenfec/"
+repository = "https://github.com/jeremyjbowers/pyopenfec"
 
 
 authors = [
-  "Robert Townley <me@roberttownley.com>",
   "Jeremy Bowers <jeremyjbowers@gmail.com>",
   "Bob Lannon",
   "Kevin Schaul",
   "Janak Mayer",
   "Evan Sonderegger",
+  "Robert Townley <me@roberttownley.com>",
 ]
 
 [tool.poetry.dependencies]
